# fremontopen

./: .gitignore  .replit  BACKLOG.md  README.md  autofixer.prompt.yml  dev_backend.sh  dev_frontend.sh  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: codacy.yml  data-refresh.yml  deploy-shared.yml  deploy.yml  ops-review.yml  seed_issues.yml  sync_backlog.yml
artifacts/api-server/: package.json
backend/: .env.example  .gitignore  admin_routes.py  ai_agent.py  alias_suggestions.py  auth.py  backfill_tournaments.py  challonge_client.py  cuestats_dev.db  database.py  export_static.py  extras_routes.py  fargo_refresh.py  import_side_matches.py  manual_side_matches.csv.example  name_cleaning.py  og_image.py  player_aliases.json  player_entry_classification.py  player_overrides.json  player_overrides.py  players_extras.py  prize_overrides.json.example  requirements.txt  season_points.json  seed_dev.py  server.py  single_name_aliases.py  sync_job.py  users.py  validation_report.py
deploy/: SHARED_HOSTING.md  bootstrap.sh  cuestats.service  nginx.conf  remote_deploy.sh
docs/: ARCHITECTURE.md  DECISIONS.md  FARGO_REFRESH_PLAN.md  IDEAS.md  PRD.md  README.md  ops-console-local.md
frontend/: README.md  craco.config.js  package.json
frontend/src/: App.css  (+3 more)
scripts/: check_public_boundary.py  check_static_data_budget.py  create_github_issues.sh  ops_review.py  package.json  refresh-static-data.ps1  review-single-name-aliases.ps1  run-ops-review.ps1
(+3186 files in other folders)
