[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "bcrypt==4.1.3",
    "email-validator>=2.3.0",
    "fastapi==0.110.1",
    "httpx==0.28.1",
    "motor==3.3.1",
    "passlib==1.7.4",
    "pillow==12.2.0",
    "pydantic[email]>=2.13.4",
    "pyjwt==2.12.1",
    "pymongo==4.5.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.27",
    "requests==2.33.1",
    "starlette==0.37.2",
    "uvicorn==0.25.0",
]
